--- a/faq.html
+++ b/faq.html
@@ -55,14 +55,14 @@
         </dl>
 		<script>
 			(function($) {
-				
-			  var allPanels = $('.accordion > dd').hide();
-				
-			  $('.accordion > dt > a').click(function() {
-					allPanels.slideUp();
-					$(this).parent().next().slideDown(150);
-					return false;
-			  });
+			
+			var allPanels = $('.accordion > dd').hide();
+			// use of jquery function
+			$('.accordion > dt > a').click(function() {
+				allPanels.slideUp();
+				$(this).parent().next().slideDown(150);
+				return false;
+			});
 			
 			})(jQuery);
         </script>
