--- a/register.html
+++ b/register.html
@@ -23,9 +23,15 @@
     
     </head> 
 <body> 
-<div data-role="page" id="reg">
+
+<!-- Call Menu -->
+<div id="nav"></div>
+<input type="checkbox" id="nav-trigger" class="nav-trigger" />
+<label for="nav-trigger"></label>
+
+
+<div data-role="page" id="reg" class="site-wrap">
 	<div class="header">
-        <a role="button" href="javascript:void(0);" class="ui-btn ui-corner-all ui-shadow ui-btn-left ui-toolbar-back-btn ui-icon-carat-l ui-btn-icon-left" data-rel="back">Back</a>
 		<h1>Registration</h1>
 	</div>
     
@@ -56,7 +62,6 @@
 $(document).ready(function() {
 //==============POST===============
 	$("#submit").on('click',function() {
-		
 
 		// get values from input text  
 		var username = $('#username').val();
