--- a/register.html
+++ b/register.html
@@ -93,6 +93,7 @@ $(document).ready(function() {
 						alert("You have Successfully Registered");
 					},
                     error: function(err){
+						window.location = "registration";
                         alert("Username has already been taken!");
                     }
                 });
